--- a/views/response.ejs
+++ b/views/response.ejs
@@ -88,7 +88,7 @@
         <tr>
             <td class="td-bottom"
                 colspan="2">Thank you!.<br>
-                <a href="https://nutandigitalmart.com">Close</a>
+                <a href="<%= link %>">Close</a>
             </td>
           
         </tr>
